FIX error messages
Errors were not displaying the attribute with error.

Details
* FIX error messages

--- a/app/views/shared/_error_messages.slim
+++ b/app/views/shared/_error_messages.slim
@@ -4,5 +4,5 @@
       #error_explanation.alert.alert-danger
         button.close[data-dismiss='alert'] &times;
         ul
-          - resource.errors.each do |_, message|
+          - resource.errors.full_messages.each do |message|
             li= message
