--- a/app/views/rooms/index.slim
+++ b/app/views/rooms/index.slim
@@ -2,6 +2,6 @@ h1= t '.title'
 
 ul
   - @rooms.each do |room|
-    li= room.name
+    li= link_to room.name, room_messages_path(room_id: room.id)
 
 = link_to t('.new_room'), new_room_path, class: 'btn btn-primary'
