ADD persisted messages
Messaages should be persisted, otherwise they will disappear after page
has been reloaded.

Details
* ADD saving messages
* ADD delayed broadcasting

--- a/app/views/messages/index.slim
+++ b/app/views/messages/index.slim
@@ -3,5 +3,5 @@
 #messages
   ul
     li#message-template.hidden
-  - @messages.each do |message|
-    li= message
+    - @messages.each do |message|
+      li= message.text
