ADD animations on messages
In order to be more appearing visually, messages should fade in.

Details
* ADD animations on messages

--- a/app/views/messages/index.slim
+++ b/app/views/messages/index.slim
@@ -1,7 +1,15 @@
-= render 'form'
+.container
+  = render 'form'
 
-#messages
-  ul
-    li#message-template.hidden
-    - @messages.each do |message|
-      li= markdown(message.text)
+  hr
+
+  .row
+    .col-md-12
+      #messages
+        #message-template.block--fadingIn.hidden
+          .message
+          hr
+
+        - @messages.each do |message|
+          .message.block--fadingIn= markdown(message.text)
+          hr
