--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+@import "animations";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -6,4 +7,11 @@
     content: ' *';
     color: red;
   }
+}
+
+.block--fadingIn {
+  animation: fadein 1s;
+  -moz-animation: fadein 1s;
+  -webkit-animation: fadein 1s;
+  -o-animation: fadein 1s;
 }
