--- a/app/views/messages/_form.slim
+++ b/app/views/messages/_form.slim
@@ -4,4 +4,4 @@ form
   .row
     .col-md-12
       .form-group
-        = text_field_tag :message, nil, placeholder: t('.placeholder'), class: 'form-control'
+        = text_area_tag :message, nil, placeholder: t('.placeholder'), class: 'form-control', autofocus: true
