ADD link to home page
When a user reaches a room, he should have a link to go back to home
page.

Details
* ADD link to home page

--- a/app/views/messages/index.slim
+++ b/app/views/messages/index.slim
@@ -1,4 +1,8 @@
 .container
+  = link_to root_path do
+    = image_tag 'logo.png', class: 'img-circle img--small', alt: t('.home')
+    span.span--marginLeft= t '.back_to_home'
+
   h1.text-center= @room.name
 
   = render 'form'
