--- a/app/views/rooms/_form.slim
+++ b/app/views/rooms/_form.slim
@@ -2,11 +2,14 @@
   = render 'shared/error_messages', resource: @room
 
   .row
-    .col-md-12
+    .col-md-6
       .form-group
         = f.label :name, class: 'label--required'
         = f.text_field :name, class: 'form-control', required: true
-
+    .col-md-6
+      .form-group
+        = f.label :private
+        = f.check_box :private, class: 'form-control'
   .row
     .col-md-12
       .form-group
