--- a/app/views/messages/_form.slim
+++ b/app/views/messages/_form.slim
@@ -5,3 +5,4 @@ form
     .col-md-12
       .form-group
         = text_area_tag :message, nil, placeholder: t('.placeholder'), class: 'form-control', autofocus: true
+      <trix-editor input="message"></trix-editor>
