--- a/app/views/messages/_form.slim
+++ b/app/views/messages/_form.slim
@@ -4,5 +4,6 @@ form
   .row
     .col-md-12
       .form-group
-        = text_area_tag :message, nil, placeholder: t('.placeholder'), class: 'form-control', autofocus: true
-      <trix-editor input="message"></trix-editor>
+        = text_area_tag :message, nil, placeholder: t('.placeholder'), class: 'form-control hidden'
+      <trix-editor id="editor" input="message"></trix-editor>
+      <button id="send" > Ok</button>
