--- a/app/views/messages/index.slim
+++ b/app/views/messages/index.slim
@@ -3,14 +3,17 @@
     = image_tag 'logo.png', class: 'img-circle img--small', alt: t('.home')
     span.span--marginLeft= t '.back_to_home'
 
+
   h1.text-center= @room.name
+  h6= raw "Recherche"
+  = render 'search_form'
   h6= raw "Room privéé accessible avec  : <br/> #{tokenize_session_room_url(@room.token)}" if @room.private?
   = render 'form'
 
   hr
 
   .row
-    .col-md-12
+    .col-md-8
       #messages
         #message-template.block--fadingIn.hidden
           .message
@@ -19,3 +22,8 @@
         - @messages.each do |message|
           .message.block--fadingIn= raw(message.text)
           hr
+    .col-md-4
+      - @room.room_documents.each do |document|
+        .row
+          .col-md-12
+            h2 = document.extension_name
