--- a/app/views/messages/_search_form.slim
+++ b/app/views/messages/_search_form.slim
@@ -5,6 +5,7 @@ form ic-post-to="/search" ic-target="#target_span" ic-src="/search" ic-verb="POS
       .form-group
         input id="form-search" type="text" name="searched"
         button id="form-button-1" type="submit" class="btn btn-default"
-         | Find me!
+         | Rechercher
         span id="target_span"
-          | You haven't searched
+          i
+            | Aucune recherche
