--- a/app/views/messages/_form.slim
+++ b/app/views/messages/_form.slim
@@ -4,5 +4,6 @@ form
     .col-md-12
       .form-group
         = text_area_tag :message, nil, placeholder: t('.placeholder'), class: 'form-control hidden'
-      <trix-editor id="editor" input="message"></trix-editor>
-      <button id="send" >Ok</button>
+      trix-editor#editor input="message"
+      button#send
+        | Ok
